# simulation-integration

./: .gitignore  README.md  docker-compose.yaml  env.sample  openapi.yaml  pyproject.toml
.github/workflows/: report.yaml
data/models/: LV_goat_chupacabra_regnet.json  LV_rabbits_wolves_model02_regnet.json  LV_rabbits_wolves_model03_regnet.json  LV_rabbits_wolves_regnet.json  LV_sheep_foxes_regnet.json  SEIRD_base_model01_petrinet.json  SEIRD_stockflow.json  SEIRHDS_stockflow.json  SEIRHD_NPI_Type1_petrinet.json  SEIRHD_NPI_Type2_petrinet.json  SEIRHD_base_model01_petrinet.json  SEIRHD_npi1_age_stratified_v1.json  SEIRHD_stockflow.json  SEIRHD_with_reinfection01.json  SEIRHD_with_reinfection01_petrinet.json  SEIR_stockflow.json  SIR_stockflow.json  age_vacc_var_reinfection_v1.json  age_vacc_var_reinfection_v2.json  age_vacc_var_reinfection_v3.json  age_vacc_var_v1.json  age_vacc_var_v2.json  seiarhds.json  sidarthe.json  sirhd.json
examples/outputs/: README.md  sciml-calibrate.csv  sciml-calibrate.json
examples/requests/ciemss/: README.md  calibrate.json  ensemble-calibrate.json  ensemble-simulate.json  simulate.json
examples/requests/sciml/: README.md  calibrate.json  simulate.json  (+1 more)
flows/: README.md
flows/simulate/: 3715ec46-b900-458c-8141-2974bafc92ff.json  README.md
models/: sirhd.json
raw_models/: SEIRHD_npi1_age_stratified_v1.json  SEIRHD_with_reinfection01.json
report/: populate.py
schemas/: job_id.json  simulation.json
test/: Dockerfile  report.py  run_tests.sh
tests/: Dockerfile  report.py  requirements.txt  seed.py  utils.py  workflow.py
(+63 files in other folders)
