[tool.poetry]
name = "simulation-integration"
version = "0.1.0"
description = ""
authors = ["Five Grant <five@jataware.com>", "Matt Printz <matt@jataware.com>"]
readme = "README.md"
packages = [{include = "report"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
